--- a/R_companion.ipynb
+++ b/R_companion.ipynb
@@ -6,8 +6,7 @@
       "name": "R_companion",
       "provenance": [],
       "collapsed_sections": [],
-      "toc_visible": true,
-      "authorship_tag": "ABX9TyNz/Scv2kIMIEZyp+hN+8oS",
+      "authorship_tag": "ABX9TyMyJ9ZzlbisRQ6KQybsDZpq",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1258,17 +1257,6 @@
       ]
     },
     {
-      "cell_type": "code",
-      "metadata": {
-        "id": "1AhzcYonNEEi"
-      },
-      "source": [
-        ""
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
       "cell_type": "markdown",
       "metadata": {
         "id": "9H4tFOIjNGXw"
@@ -2006,7 +1994,7 @@
         "* Make a list of your variables. This list should include all important variables in your dataset, but it should also include important variables that are not present in your dataset, but that nevertheless appears important to you in the context of the data. (You could add these variable either immediately or at a later stage.)\n",
         "* Order your variables according the the time at which they are meaure, or at which they are determined. If two variables are measured at the same time, put them at the same rank in this order.\n",
         "* Draw directional arrows for all direct causal effects you think are relevant in this mechanism. If in doubt, opt for placing an arrow rather than omitting it; o nthe other hand, do not simply put all possible arrows, but try to find arrows that can be plausible removed. Do not place directional arrows in reverse time order, or between variables measured at the same time.\n",
-        "* Draw bidirectional arrows between variables you think are very like affected jointly by other variables that are not in the DAG. These can run between variables measured at the same time. (For example, it is common to measure education level and marital status in epidemiological studes. It is very likely that these are correlated but the underlying causal variables may or may not be part of the DAG.) Any bidirectional arrow $x ↔ y$ stands for a structure $x ← u → y$, where $u$ is an unobserved variable.\n",
+        "* Draw bidirectional arrows between variables you think are very like affected jointly by other variables that are not in the DAG. These can run between variables measured at the same time. (For example, it is common to measure education level and marital status in epidemiological studes. It is very likely that these are correlated but the underlying causal variables may or may not be part of the DAG.) Any bidirectional arrow $x \\leftrightarrow  y$ stands for a structure $x \\leftarrow u \\rightarrow y$, where $u$ is an unobserved variable.\n",
         "\n",
         "Please apply this strategy to build a causal diagram. You can either use the dataset you are planning to use for the assignment. This would be a good initial check whether this dataset is suitable or not. Or you could click on this link:\n",
         "\n",
@@ -2190,7 +2178,7 @@
         "id": "vaB1lOvT2Ka9"
       },
       "source": [
-        "So, there are 6 different paths, and 3 of these are open. What would it take us to block all these? Let us first try to condition on $B$, which for sure is going to block the path $A → B → Z$:"
+        "So, there are 6 different paths, and 3 of these are open. What would it take us to block all these? Let us first try to condition on $B$, which for sure is going to block the path $A \\rightarrow B \\rightarrow Z$:"
       ]
     },
     {
@@ -2254,7 +2242,7 @@
         "id": "6tDcpj7X4M7L"
       },
       "source": [
-        "We have now blocked 2 of the 4 paths that were originally open, but we have also opened the path $A → B ← C → Z$, which contains $B$ as a collider. The only way we can close this now is by conditioning also on $C$:"
+        "We have now blocked 2 of the 4 paths that were originally open, but we have also opened the path $A \\rightarrow  B \\leftarrow C \\rightarrow Z$, which contains $B$ as a collider. The only way we can close this now is by conditioning also on $C$:"
       ]
     },
     {
@@ -2318,7 +2306,7 @@
         "id": "ZGcbyh_Q5n_g"
       },
       "source": [
-        "Now we are left with only one open path: $A → X → Y → Z$. To block this, we can try to condition on either $X$ or $Y$ . Let’s try $Y$ (but please also see what happens if you try $X$ instead!)."
+        "Now we are left with only one open path: $A \\rightarrow X \\rightarrow Y \\rightarrow Z$. To block this, we can try to condition on either $X$ or $Y$ . Let’s try $Y$ (but please also see what happens if you try $X$ instead!)."
       ]
     },
     {
@@ -2838,7 +2826,7 @@
       "source": [
         "The first of these looks OK, but the second, less so.\n",
         "\n",
-        "Now, for the conditional independence $LE ⊥ MD | FI$. If we would simply try the for-loop from the lecture on this, we would get an error message:"
+        "Now, for the conditional independence $LE \\perp  MD \\mid  FI$. If we would simply try the for-loop from the lecture on this, we would get an error message:"
       ]
     },
     {
@@ -2955,7 +2943,7 @@
         "id": "3SYJ4nIQ9xmj"
       },
       "source": [
-        "This also looks OK. The more adventurous among you might try to extend this code to test the final independence $D ⊥ FI | LE, MD, MG$. However, there is also a shortcut for the less inclined, which tests all implied conditional independencies of a model **g** against a dataset **d** at once:"
+        "This also looks OK. The more adventurous among you might try to extend this code to test the final independence $D \\perp FI \\mid  LE, MD, MG$. However, there is also a shortcut for the less inclined, which tests all implied conditional independencies of a model **g** against a dataset **d** at once:"
       ]
     },
     {
